--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 index.html
-<!doctype html>
-<h1> mahmood sayd</h1>
+<html>
+    <header>
+    this mahmood page for his first project
+    </header>
+</html>
