--- a/html.html
+++ b/html.html
@@ -3,12 +3,17 @@ html
     <header>
     this mahmood page for his first project
     </header>
-    <h1> the user of this bage
+    <h3> the user of this bage
         <ol>
             <li> mahmood</li>
             <li> mahmood himself </li>
         </ol>
-    </h1>
+    </h3>
+   <section>
+you can folllow me on facebook and you can be my freand :
+<a href = " https://www.facebook.com/mahmood.bakeer.54/"><div>Abo moazz</div></a>
+
+   </section>
     <p> he can always edit on this page </p>
     <p> mahmood bakeer 2023 copy right &copy;</p>
 </html>
