--- a/html.html
+++ b/html.html
@@ -1,5 +1,7 @@
 html
+<!doctype html>
 <html>
+    <meta charset="utf-8">
     <header>
     this mahmood page for his first project
     </header>
@@ -10,10 +12,12 @@ html
         </ol>
     </h3>
    <section>
-you can folllow me on facebook and you can be my freand :
-<a href = " https://www.facebook.com/mahmood.bakeer.54/"><div>Abo moazz</div></a>
+you can folllow me on facebook and you can be my friend :
+<a href = " https://www.facebook.com/mahmood.bakeer.54/" target="_b
+ " title="Abo moaaz"> Abo moaaz</a>here >
 
    </section>
+   <img scr="c:\Users\IFIX\Pictures\٢٠٢٢٠١٢٩_١٤٥٣٠٣.heic " widht="640" height="480">
     <p> he can always edit on this page </p>
     <p> mahmood bakeer 2023 copy right &copy;</p>
 </html>
