--- a/html.html
+++ b/html.html
@@ -11,13 +11,30 @@ html
             <li> mahmood himself </li>
         </ol>
     </h3>
+    <style>
+    ol {
+    color: crimson;
+    font-size: medium;
+    text-align: center;
+    } 
+    h3 {
+        color :blue;
+        font-size: 36xp;
+        width: 200xp;
+    }
+    </style>
+ 
    <section>
 you can folllow me on facebook and you can be my friend :
-<a href = " https://www.facebook.com/mahmood.kingla" target="_b
+<a href = "https://www.facebook.com/mahmood.kingla" target="_b
  " title="Abo moaaz"> Abo moaaz</a>here >
+ <style>
+    section{
+        color :aqua;
+    }
+ </style>
 
-   </section>
-   <img scr="https://scontent.flca1-1.fna.fbcdn.net/v/t39.30808-6/308632513_1424883747922118_9104202621985553994_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=730e14&_nc_ohc=pRsO3LkQHegAX98scLM&_nc_ht=scontent.flca1-1.fna&oh=00_AfCI_G4vp2t7uU-B_mcNLPNQmwpGojG7N3Cg0jhcH7HNgA&oe=64715522 " widht="640" height="480">
+   </section><img scr="E:\istockphoto-1346150003-612x612" " widht="640" height="480">
     <p> he can always edit on this page </p>
     <p> mahmood bakeer 2023 copy right &copy;</p>
 </html>
