--- a/html.html
+++ b/html.html
@@ -33,7 +33,7 @@ you can folllow me on facebook and you can be my friend :
     }
  </style>
 
-   </section><img scr="E:\istockphoto-1346150003-612x612.jpg" widht="640" height="480">
+   </section><img scr="C:\Users\IFIX\Documents\GitHub\mahmood\istockphoto-134150003-612x612.jpg" widht="640" height="480">
     <p> he can always edit on this page </p>
     <p> mahmood bakeer 2023 copy right &copy;</p>
 </html>
