--- a/html.html
+++ b/html.html
@@ -12,14 +12,17 @@ html
         </ol>
     </h3>
     <style>
-    ol {
+    header {
     color: crimson;
-    font-size: medium;
+    font-size: large;
+    text-align: center;
+    scrollbar-highlight-color: blue;
     } 
     h3 {
-        color :blue;
+        color :burlywood;
         font-size: 36xp;
         width: 200xp;
+        scrollbar-highlight-color: slategray;
     }
     </style>
  
@@ -30,10 +33,12 @@ you can folllow me on facebook and you can be my friend :
  <style>
     section{
         color :aqua;
+        scrollbar-highlight-color: blueviolet;
     }
  </style>
 
-   </section><img scr="C:\Users\IFIX\Documents\GitHub\mahmood\istockphoto-134150003-612x612.jpg" widht="640" height="480">
+   </section>
+   <img scr="C:\Users\IFIX\Documents\GitHub\mahmood\istockphoto-134150003-612x612.jpg" widht="640" height="480">
     <p> he can always edit on this page </p>
     <p> mahmood bakeer 2023 copy right &copy;</p>
 </html>
