--- a/html.html
+++ b/html.html
@@ -2,43 +2,76 @@ html
 <!doctype html>
 <html>
     <meta charset="utf-8">
-    <header>
+    <body>
+    <h1>
     this mahmood page for his first project
-    </header>
-    <h3> the user of this bage
+    </h1>
+    <h4>
         <ol>
             <li> mahmood</li>
-            <li> mahmood himself </li>
+            <li> admin of his project </li>
         </ol>
-    </h3>
+    </h4>
+    <p>
+        في ايام العطل أقوم بتعديل على هذه الصفحة وحبك وصقل مهاراتي في مجال تطوير صفحات الويب 
+        بلاضافة إلى أنني مبندء لا يحب التفاخر بأعماله نظراً لسهولتهاوبساطتها مقابل الأعمال التي 
+        يقوم بها المبرمجين المخضرميين
+    </p>
     <style>
-    header {
+        p :hover  
+        {
+color: blue;
+        }
+    h1 {
     color: crimson;
-    font-size: large;
+    font-size: 36px;
     text-align: center;
     scrollbar-highlight-color: blue;
-    } 
-    h3 {
-        color :burlywood;
+    background-color: blue;
+    top:auto;}
+    
+h3 {
+        color :red;
         font-size: 36xp;
         width: 200xp;
         scrollbar-highlight-color: slategray;
+        background-color: aquamarine;
+    }
+    h3 li {
+        list-style:disc;
+    }
+    h1:hover{
+        color:black;
     }
     </style>
- 
    <section>
 you can folllow me on facebook and you can be my friend :
 <a href = "https://www.facebook.com/mahmood.kingla" target="_b
  " title="Abo moaaz"> Abo moaaz</a>here >
  <style>
     section{
-        color :aqua;
+        color :blue ;
         scrollbar-highlight-color: blueviolet;
+    }
+    section > a > title
+    {
+text-underline-position:unset;
+color: yellow;
+
+    }
+    section a:hover{
+        background-color: red;
+
+    }
+    body
+    {
+text-align: center;
     }
  </style>
 
    </section>
-   <img scr="C:\Users\IFIX\Documents\GitHub\mahmood\istockphoto-134150003-612x612.jpg" widht="640" height="480">
+
     <p> he can always edit on this page </p>
     <p> mahmood bakeer 2023 copy right &copy;</p>
+</body>
 </html>
